--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,11 @@
                 <div class="location-count-header">Locations on Map</div>
                 <div class="location-count-value">0</div>
             </div>
+            <div id="temperaturePanel" class="temperature-panel hidden">
+                <div class="temperature-header">Average Temperature</div>
+                <div class="temperature-value">--°C</div>
+                <div class="temperature-hover-info"></div>
+            </div>
             <div id="mapControls" class="map-controls-panel">
     <label class="theme-switch" title="Toggle Dark/Light Mode">
         <input type="checkbox" id="themeToggleCheckbox" onchange="toggleTheme()">
