--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,7 @@
                 <div id="overlay-legend" class="overlay-legend"></div>
             </div>
             <div id="dataSources" class="data-sources-panel">
+                <div class="data-sources-header">Data Sources</div>
                 <div class="data-sources-list">
                     <button class="data-source-btn active" id="source-citylayers" data-source="citylayers" title="CityLayers - Location data from Neo4j database">
                         <img src="/static/images/city_layers_logo.png" alt="CityLayers" class="source-icon-img">
